[project]
name = "lang-graph"
version = "0.1.0"
requires-python = ">=3.10.0, <4.0.0"
dependencies = [
    "arxiv>=1.4.8,<2.0.0",
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
